# azure-vm-utils

./: .gitignore  CMakeLists.txt  README.md  azure-nvme-utils-noauto.spec  azure-nvme-utils-nopandoc.spec  azure-nvme-utils.spec  azure-vm-utils.spec
.github/workflows/: debs.yml  msvc.yml
doc/: azure-nvme-id.1.md.in
packaging/: mkdeb.sh
packaging/debian/: changelog  control  rules
packaging/fedora/: azure-nvme-utils.spec
src/: main.c
